# openmp_code

openmp/: CMakeLists.txt  main.cpp  openmp_for.cpp  openmp_test.pro
